--- a/CredentialManager/app/build.gradle
+++ b/CredentialManager/app/build.gradle
@@ -31,12 +31,10 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
     namespace 'com.google.credentialmanager.sample'
-    compileSdk 34
-    compileSdkPreview "VanillaIceCream"
+    compileSdk 35
     defaultConfig {
         applicationId "com.google.credentialmanager.sample"
-        minSdk 21
-        targetSdkPreview "VanillaIceCream"
+        minSdk 28
         versionCode 1
         versionName "1.0"
 
@@ -70,15 +68,11 @@ android {
 
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
-    }
-
-    composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.2"
+        jvmTarget = '11'
     }
     packagingOptions {
         resources {
@@ -93,23 +87,23 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
-    implementation 'androidx.credentials:credentials-play-services-auth:1.5.0-alpha02'
-    implementation 'androidx.credentials:credentials:1.5.0-alpha02'
+    implementation 'androidx.credentials:credentials-play-services-auth:1.5.0-alpha04'
+    implementation 'androidx.credentials:credentials:1.5.0-alpha04'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
 
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.4'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.8.4"
 
 }
